--- a/Games.html
+++ b/Games.html
@@ -34,32 +34,6 @@
             color: #f5f5f5;
         }
 
-        .nav-buttons {
-            margin-top: 10px;
-        }
-
-        .nav-button, .nav-button2 {
-            text-decoration: none;
-            background-color: #333;
-            border: none;
-            color: #fff;
-            padding: 10px 20px;
-            margin: 5px;
-            cursor: pointer;
-            font-size: 1em;
-            border-radius: 30px;
-            transition: background-color 0.3s, transform 0.2s;
-        }
-
-        .nav-button:hover, .nav-button2:hover {
-            background-color: #555;
-            transform: scale(1.05);
-        }
-
-        .nav-button2 {
-            background-color: #666;
-        }
-
         .content {
             display: flex;
             flex-wrap: wrap; 
@@ -127,211 +101,39 @@
 <body>
     <div class="topbar">
         <h1>Void's Games</h1>
-        <div class="nav-buttons">
-            <a href="./" class="nav-button">Home</a>
-            <a href="./Games.html" class="nav-button2">Games</a>
-            <a href="./About.html" class="nav-button">About</a>
-        </div>
     </div>
-       <div class="content">
-        <a href="/Iframe/BurritoBision.html" class="game-button">
-            <div class="image-container">
-                <img src="./img/burrito-bison-image.png" alt="Burrito Bison">
-                <div class="tooltip">Burrito Bison</div>
-            </div>
-        </a>
-        <a href="/Iframe/subsurfers" class="game-button">
-            <div class="image-container">
-                <img src="./img/subwaysurfers.png" alt="Subway Surfers">
-                <div class="tooltip">Subway Surfers</div>
-            </div>
-        </a>
-        <a href="/Iframe/basketball-stars/" class="game-button">
-            <div class="image-container">
-                <img src="/img/BAS.webp" alt="Basketball Stars">
-                <div class="tooltip">Basketball Stars</div>
-            </div>
-        </a>
-        <a href="/Iframe/Planes" class="game-button">
-            <div class="image-container">
-                <img src="./img/plane.jpg" alt="Bit plane">
-                <div class="tooltip">Bit Plane</div>
-            </div>
-        </a>
-        <a href="/Iframe/monkey" class="game-button">
-            <div class="image-container">
-                <img src="./img/monkey.jpeg" alt="Monkey Mart">
-                <div class="tooltip">Monkey Mart</div>
-            </div>
-        </a>
-        <a href="/Iframe/funnyshooter2" class="game-button">
-            <div class="image-container">
-                <img src="./img/funnyshooter2.webp" alt="Funny Shooter 2">
-                <div class="tooltip">Funny Shooter 2</div>
-            </div>
-        </a>
-        <a href="/Iframe/impossiblequiz" class="game-button">
-            <div class="image-container">
-                <img src="./img/impossiblequiz.webp" alt="Impossible Quiz">
-                <div class="tooltip">Impossible Quiz</div>
-            </div>
-        </a>
-        <a href="/Iframe/jetpack-joyride" class="game-button">
-            <div class="image-container">
-                <img src="./img/jetpack-joyride.webp" alt="Jetpack Joyride">
-                <div class="tooltip">Jetpack Joyride</div>
-            </div>
-        </a>
-        <a href="/Iframe/learntofly" class="game-button">
-            <div class="image-container">
-                <img src="./img/learntofly.webp" alt="Learn to Fly">
-                <div class="tooltip">Learn to Fly</div>
-            </div>
-        </a>
-        <a href="/Iframe/learntofly2" class="game-button">
-            <div class="image-container">
-                <img src="./img/learntofly2.webp" alt="Learn to Fly 2">
-                <div class="tooltip">Learn to Fly 2</div>
-            </div>
-        </a>
-        <a href="/Iframe/motox3m" class="game-button">
-            <div class="image-container">
-                <img src="./img/motox3m.webp" alt="Moto X3M">
-                <div class="tooltip">Moto X3M</div>
-            </div>
-        </a>
-        <a href="/Iframe/motoxpool" class="game-button">
-            <div class="image-container">
-                <img src="./img/motoxpool.webp" alt="Moto X3M Pool">
-                <div class="tooltip">Moto X3M Pool</div>
-            </div>
-        </a>
-        <a href="/Iframe/moto-spook" class="game-button">
-            <div class="image-container">
-                <img src="./img/moto-spook.webp" alt="Moto X3M Spooky">
-                <div class="tooltip">Moto X3M Spooky</div>
-            </div>
-        </a>
-        <a href="/Iframe/motoxpool" class="game-button">
-            <div class="image-container">
-                <img src="./img/motoxpool.webp" alt="Moto X3M Winter">
-                <div class="tooltip">Moto X3M Winter</div>
-            </div>
-        </a>
-        <a href="/Iframe/riddleschool" class="game-button">
-            <div class="image-container">
-                <img src="./img/riddleschool.webp" alt="Riddle School"></img>
-                <div class="tooltip">Riddle School</div>
-            </div>
-        </a>
-        <a href="/Iframe/riddleschool2" class="game-button">
-            <div class="image-container">
-                <img src="./img/riddleschool.webp" alt="Riddle School 2">
-                <div class="tooltip">Riddle School 2</div>
-            </div>
-        </a>
-        <a href="/Iframe/riddleschool3" class="game-button">
-            <div class="image-container">
-                <img src="./img/riddleschool.webp" alt="Riddle School 3">
-                <div class="tooltip">Riddle School 3</div>
-            </div>
-        </a>
-        <a href="/Iframe/riddleschool4" class="game-button">
-            <div class="image-container">
-                <img src="./img/riddleschool.webp" alt="Riddle School 4">
-                <div class="tooltip">Riddle School 4</div>
-            </div>
-        </a>
-        <a href="/Iframe/riddleschool5" class="game-button">
-            <div class="image-container">
-                <img src="./img/riddleschool.webp" alt="Riddle School 5">
-                <div class="tooltip">Riddle School 5</div>
-            </div>
-        </a>
-        <a href="/Iframe/slope" class="game-button">
-            <div class="image-container">
-                <img src="./img/slope.webp" alt="Slope">
-                <div class="tooltip">Slope</div>
-            </div>
-        </a>
-        <a href="/Iframe/snowride" class="game-button">
-            <div class="image-container">
-                <img src="./img/snowride.webp" alt="Snowrider 3D">
-                <div class="tooltip">Snowrider 3D</div>
-            </div>
-        </a>
-        <a href="/Iframe/stack-ball" class="game-button">
-            <div class="image-container">
-                <img src="./img/stack-ball.webp" alt="Stack Ball">
-                <div class="tooltip">Stack Ball</div>
-            </div>
-        </a>
-        <a href="/Iframe/stickslasher" class="game-button">
-            <div class="image-container">
-                <img src="./img/stickslasher.webp" alt="Stick Slasher">
-                <div class="tooltip">Stick Slasher</div>
-            </div>
-        </a>
-        <a href="/Iframe/temple2" class="game-button">
-            <div class="image-container">
-                <img src="./img/temple-run.webp" alt="Temple Run 2">
-                <div class="tooltip">Temple Run 2</div>
-            </div>
-        </a>
-        <a href="/Iframe/tiny-fishing" class="game-button">
-            <div class="image-container">
-                <img src="./img/tiny-fishing.webp" alt="Tiny Fishing">
-                <div class="tooltip">Tiny Fishing</div>
-            </div>
-        </a>
-        <a href="/Iframe/tosstheturtle" class="game-button">
-            <div class="image-container">
-                <img src="./img/tosstheturtle.webp" alt="Toss the Turtle">
-                <div class="tooltip">Toss the Turtle</div>
-            </div>
-        </a>
-        <a href="/Iframe/vex3" class="game-button">
-            <div class="image-container">
-                <img src="./img/vex3.webp" alt="Vex 3">
-                <div class="tooltip">Vex 3</div>
-            </div>
-        </a>
-        <a href="/Iframe/vex4" class="game-button">
-            <div class="image-container">
-                <img src="./img/vex4.webp" alt="Vex 4">
-                <div class="tooltip">Vex 4</div>
-            </div>
-        </a>
-        <a href="/Iframe/vex5" class="game-button">
-            <div class="image-container">
-                <img src="./img/vex5.webp" alt="Vex 5">
-                <div class="tooltip">Vex 5</div>
-            </div>
-        </a>
-        <a href="/Iframe/vex6" class="game-button">
-            <div class="image-container">
-                <img src="./img/vex6.webp" alt="Vex 6">
-                <div class="tooltip">Vex 6</div>
-            </div>
-        </a>
-        <a href="/Iframe/vex7" class="game-button">
-            <div class="image-container">
-                <img src="./img/vex7.webp" alt="Vex 7">
-                <div class="tooltip">Vex 7</div>
-            </div>
-        </a>
-        <a href="/Iframe/worlds-hardest-game" class="game-button">
-            <div class="image-container">
-                <img src="./img/worlds-hardest-game.webp" alt="World's Hardest Game">
-                <div class="tooltip">World's Hardest Game</div>
-            </div>
-        </a>
-        <a href="/Iframe/worlds-hardest-game-2" class="game-button">
-            <div class="image-container">
-                <img src="./img/worlds-hardest-game.webp" alt="World's Hardest Game 2">
-                <div class="tooltip">World's Hardest Game 2</div>
-            </div>
-        </a>
+    <div class="content" id="game-buttons-container">
     </div>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            fetch('/games.json')
+                .then(response => response.json())
+                .then(data => {
+                    const container = document.getElementById('game-buttons-container');
+                    data.gameButtons.forEach(game => {
+                        const gameButton = document.createElement('a');
+                        gameButton.className = 'game-button';
+                        gameButton.href = game.link;
+
+                        const imageContainer = document.createElement('div');
+                        imageContainer.className = 'image-container';
+
+                        const img = document.createElement('img');
+                        img.src = game.image;
+                        img.alt = game.text;
+
+                        const tooltip = document.createElement('div');
+                        tooltip.className = 'tooltip';
+                        tooltip.textContent = game.text;
+
+                        imageContainer.appendChild(img);
+                        imageContainer.appendChild(tooltip);
+                        gameButton.appendChild(imageContainer);
+                        container.appendChild(gameButton);
+                    });
+                })
+                .catch(error => console.error('Error loading game buttons:', error));
+        });
+    </script>
 </body>
 </html>
