--- a/Games.html
+++ b/Games.html
@@ -127,8 +127,8 @@
     <div class="topbar">
         <h1>Void's Games</h1>
         <div class="nav-buttons">
-            <a href="./" class="nav-button2">Home</a>
-            <a href="./Games.html" class="nav-button">Games</a>
+            <a href="./" class="nav-button">Home</a>
+            <a href="./Games.html" class="nav-button2">Games</a>
             <a href="./About.html" class="nav-button">About</a>
         </div>
     </div>
