--- a/Iframe/slope.html
+++ b/Iframe/slope.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -85,6 +85,7 @@
             height: 100%;
             border: 2px solid #444;
             border-radius: 10px;
+            transition: width 0.3s, height 0.3s, position 0.3s;
         }
 
         .fullscreen-button {
@@ -109,9 +110,9 @@
     <div class="topbar">
         <h1>Void's Games</h1>
         <div class="nav-buttons">
-            <a href="/index.html" class="nav-button">Home</a>
-            <a href="/games.html" class="nav-button">Games</a>
-            <a href="/About.html" class="nav-button">About</a>
+            <a class='nav-button' href='/'>Home</a>
+            <a class='nav-button' href='/games'>Games</a>
+            <a class='nav-button' href='/about'>About</a>
         </div>
     </div>
     <div class="content">
@@ -144,6 +145,23 @@
                 }
             }
         }
+
+        document.addEventListener('fullscreenchange', () => {
+            const iframe = document.getElementById('gameIframe');
+            if (document.fullscreenElement) {
+                iframe.style.position = 'fixed';
+                iframe.style.top = '0';
+                iframe.style.left = '0';
+                iframe.style.width = '100%';
+                iframe.style.height = '100%';
+            } else {
+                iframe.style.position = '';
+                iframe.style.width = '';
+                iframe.style.height = '';
+            }
+        });
     </script>
 </body>
 </html>
+
+
