--- a/Iframe/slope.html
+++ b/Iframe/slope.html
@@ -145,8 +145,8 @@
                 iframe.style.position = 'fixed';
                 iframe.style.top = '0';
                 iframe.style.left = '0';
-                iframe.style.width = '100vw'; // Use viewport width
-                iframe.style.height = '100vh'; // Use viewport height
+                iframe.style.width = '100%'; // Use viewport width
+                iframe.style.height = '100%'; // Use viewport height
             } else {
                 // Reset iframe styles when exiting fullscreen
                 iframe.style.position = '';
