--- a/Iframe/slope.html
+++ b/Iframe/slope.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Void's Games</title>
+    <script>
+        alert("If you want fullscreen to work, you need to fullscreen it on the loading page. Sorry, Slope was built weird. I'm looking for a fix.");
+    </script>
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
@@ -17,6 +20,7 @@
             display: flex;
             flex-direction: column;
         }
+
         .topbar {
             background-color: #222;
             padding: 20px;
@@ -62,7 +66,7 @@
             justify-content: center;
             text-align: center;
             padding: 20px;
-            position: relative; /* This ensures proper positioning */
+            position: relative;
         }
 
         .iframe-container {
