--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Void's Games</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
-            font-family: 'Montserrat', sans-serif;
-            background: linear-gradient(135deg, #1a1a1a, #0d0d0d);
+            font-family: 'Arial', sans-serif;
+            background-color: #1a1a1a;
             color: #f5f5f5;
             margin: 0;
             padding: 0;
-            height: 100vh; 
-            overflow: hidden; 
+            height: 100vh;
+            overflow: hidden;
             display: flex;
             flex-direction: column;
-            scroll-behavior: smooth;
         }
 
         .topbar {
@@ -49,91 +48,95 @@
             cursor: pointer;
             font-size: 1em;
             border-radius: 30px;
-            transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
-            box-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
+            transition: background-color 0.3s, transform 0.2s;
         }
 
-        .nav-button:hover, .nav-button2:hover {
+        .nav-button:hover {
             background-color: #555;
             transform: scale(1.05);
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+        }
+
+        .nav-button2 {
+            background-color: #666;
         }
 
         .content {
+            flex-grow: 1;
             display: flex;
-            flex-wrap: wrap;
+            flex-direction: column;
+            align-items: center;
             justify-content: center;
             padding: 20px;
-            gap: 30px;
-            flex-grow: 1;
-            overflow-y: auto;
-            animation: fadeIn 1s ease-in-out;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-
-        .game-button {
-            background-color: #222;
-            border-radius: 20px;
-            padding: 15px;
-            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.4);
             text-align: center;
-            transition: transform 0.3s, box-shadow 0.3s;
-            max-width: 180px;
         }
 
-        .game-button:hover {
-            transform: translateY(-10px);
-            box-shadow: 0 15px 25px rgba(0, 0, 0, 0.7);
+        .content p {
+            font-size: 1.5em;
+            margin: 10px 0;
+        }
+
+        #icon {
+            display: block;
+            margin: 20px auto;
+            width: 300px;
+            height: 300px;
+            border-radius: 20px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+        }
+
+        .play-button-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 20px 0;
+        }
+
+        .play-button {
+            text-decoration: none;
+            background-color: #28a745;
+            color: #fff;
+            padding: 15px 30px;
+            font-size: 2em;
+            border-radius: 50px;
+            transition: background-color 0.3s, transform 0.2s;
+        }
+
+        .play-button:hover {
+            background-color: #218838;
+            transform: translateY(-3px);
+        }
+
+        .image-container {
+            position: relative;
+            display: inline-block;
         }
 
         .image-container img {
-            width: 100%;
-            border-radius: 15px;
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        .image-container:hover img {
-            transform: scale(1.08);
-            box-shadow: 0 8px 15px rgba(255, 255, 255, 0.2);
+            width: 100px;
+            height: auto;
+            border-radius: 20%;
         }
 
         .tooltip {
             visibility: hidden;
-            background-color: rgba(34, 34, 34, 0.9); 
+            width: calc(100% - 25px);
+            background-color: rgba(34, 34, 34, 0.8);
             color: #fff;
             text-align: center;
-            border-radius: 5px;
-            padding: 10px;
+            border-radius: 15px;
+            padding: 3px;
             position: absolute;
             bottom: 5px;
             left: 50%;
-            transform: translateX(-50%) scale(0.9);
+            transform: translateX(-50%);
             opacity: 0;
-            transition: opacity 0.3s, transform 0.3s;
-            font-size: 0.85em;
-            white-space: nowrap;
+            transition: opacity 0.3s;
+            font-size: 0.8em;
         }
 
         .image-container:hover .tooltip {
             visibility: visible;
             opacity: 1;
-            transform: translateX(-50%) scale(1);
-        }
-
-        @media (max-width: 768px) {
-            .content {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .game-button {
-                width: 80%;
-                margin-bottom: 20px;
-            }
         }
     </style>
 </head>
@@ -141,44 +144,21 @@
     <div class="topbar">
         <h1>Void's Games</h1>
         <div class="nav-buttons">
-            <a href="./" class="nav-button">Home</a>
-            <a href="./Games.html" class="nav-button2">Games</a>
+            <a href="./" class="nav-button2">Home</a>
+            <a href="./Games.html" class="nav-button">Games</a>
             <a href="./About.html" class="nav-button">About</a>
         </div>
     </div>
-    <div class="content" id="game-buttons-container">
+    
+    <div class="content">
+        <p>Hey, what is this website?</p>
+        <p>This is a simple game website to have fun.</p>
+        <p>It will be updated pretty often.</p>
+        <img src="./img/icons.png" id="icon" alt="Game Icon">
     </div>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            fetch('/games.json')
-                .then(response => response.json())
-                .then(data => {
-                    const container = document.getElementById('game-buttons-container');
-                    data.gameButtons.forEach(game => {
-                        const gameButton = document.createElement('a');
-                        gameButton.className = 'game-button';
-                        gameButton.href = game.link;
-
-                        const imageContainer = document.createElement('div');
-                        imageContainer.className = 'image-container';
-
-                        const img = document.createElement('img');
-                        img.src = game.image;
-                        img.alt = game.text;
-
-                        const tooltip = document.createElement('div');
-                        tooltip.className = 'tooltip';
-                        tooltip.textContent = game.text;
-
-                        imageContainer.appendChild(img);
-                        imageContainer.appendChild(tooltip);
-                        gameButton.appendChild(imageContainer);
-                        container.appendChild(gameButton);
-                    });
-                })
-                .catch(error => console.error('Error loading game buttons:', error));
-        });
-    </script>
+    <div class="play-button-container">
+        <a href="./Games.html" class="play-button">Play</a>
+    </div>
 </body>
 </html>
